{
  "version": 4,
  "terraform_version": "1.1.3",
  "serial": 306,
  "lineage": "bbdccc38-d62d-718e-ff2f-924e176a833f",
  "resources": [
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d46f60569daca65a",
            "association_id": "eipassoc-095933b3b47e22b37",
            "domain": "vpc",
            "id": "eipalloc-0d46f60569daca65a",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-07b14c93419a4464f",
            "private_dns": "ip-192-168-1-201.eu-west-1.compute.internal",
            "private_ip": "192.168.1.201",
            "public_dns": "ec2-63-34-152-133.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.34.152.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:internet-gateway/igw-031d176d69db995c2",
            "id": "igw-031d176d69db995c2",
            "owner_id": "799061643767",
            "tags": {
              "Name": "asp_main_igw"
            },
            "tags_all": {
              "Name": "asp_main_igw"
            },
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d46f60569daca65a",
            "connectivity_type": "public",
            "id": "nat-047d8435ef2a050dd",
            "network_interface_id": "eni-07b14c93419a4464f",
            "private_ip": "192.168.1.201",
            "public_ip": "63.34.152.133",
            "subnet_id": "subnet-0d953b5500a027c8d",
            "tags": {
              "Name": "NAT gw"
            },
            "tags_all": {
              "Name": "NAT gw"
            }
          },
          "dependencies": [
            "module.Network.aws_eip.natgw_eip",
            "module.Network.aws_internet_gateway.gw",
            "module.Network.aws_subnet.public_subnet_a",
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "asp_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:route-table/rtb-0e0f965dfd40e0fec",
            "id": "rtb-0e0f965dfd40e0fec",
            "owner_id": "799061643767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-047d8435ef2a050dd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "asp_private_route"
            },
            "tags_all": {
              "Name": "asp_private_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_nat_gateway.nat_gw",
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "asp_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:route-table/rtb-07631a7b318ad4381",
            "id": "rtb-07631a7b318ad4381",
            "owner_id": "799061643767",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-031d176d69db995c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "asp_public_route"
            },
            "tags_all": {
              "Name": "asp_public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc",
            "module.Network.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03590d8538d041c3c",
            "route_table_id": "rtb-0e0f965dfd40e0fec",
            "subnet_id": "subnet-037fcbc6d50d4d575"
          },
          "dependencies": [
            "module.Network.aws_subnet.public_subnet_a",
            "module.Network.aws_vpc.asp_main_vpc",
            "module.Network.aws_eip.natgw_eip",
            "module.Network.aws_internet_gateway.gw",
            "module.Network.aws_nat_gateway.nat_gw",
            "module.Network.aws_route_table.asp_private_route",
            "module.Network.aws_subnet.private_subnet_a"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7b0536572a1220b",
            "route_table_id": "rtb-0e0f965dfd40e0fec",
            "subnet_id": "subnet-0e8b6b9d18885329a"
          },
          "dependencies": [
            "module.Network.aws_nat_gateway.nat_gw",
            "module.Network.aws_route_table.asp_private_route",
            "module.Network.aws_subnet.private_subnet_b",
            "module.Network.aws_subnet.public_subnet_a",
            "module.Network.aws_vpc.asp_main_vpc",
            "module.Network.aws_eip.natgw_eip",
            "module.Network.aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d883a5c99d1bf4a",
            "route_table_id": "rtb-07631a7b318ad4381",
            "subnet_id": "subnet-0d953b5500a027c8d"
          },
          "dependencies": [
            "module.Network.aws_subnet.public_subnet_a",
            "module.Network.aws_vpc.asp_main_vpc",
            "module.Network.aws_internet_gateway.gw",
            "module.Network.aws_route_table.asp_public_route"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088db5c90d876cdb7",
            "route_table_id": "rtb-07631a7b318ad4381",
            "subnet_id": "subnet-0af1e28bd58477fce"
          },
          "dependencies": [
            "module.Network.aws_subnet.public_subnet_b",
            "module.Network.aws_vpc.asp_main_vpc",
            "module.Network.aws_internet_gateway.gw",
            "module.Network.aws_route_table.asp_public_route"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:security-group/sg-0afb6e3a4d8c67ed5",
            "description": "Allow db communication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afb6e3a4d8c67ed5",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/24",
                  "192.168.2.0/24"
                ],
                "description": "Instances to DB",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "database_connection",
            "name_prefix": "",
            "owner_id": "799061643767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database_connection"
            },
            "tags_all": {
              "Name": "database_connection"
            },
            "timeouts": null,
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:subnet/subnet-037fcbc6d50d4d575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037fcbc6d50d4d575",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "799061643767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_a"
            },
            "tags_all": {
              "Name": "private_subnet_a"
            },
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:subnet/subnet-0e8b6b9d18885329a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8b6b9d18885329a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "799061643767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_b"
            },
            "tags_all": {
              "Name": "private_subnet_b"
            },
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:subnet/subnet-0d953b5500a027c8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d953b5500a027c8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "799061643767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_a"
            },
            "tags_all": {
              "Name": "public_subnet_a"
            },
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:subnet/subnet-0af1e28bd58477fce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af1e28bd58477fce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "799061643767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_b"
            },
            "tags_all": {
              "Name": "public_subnet_b"
            },
            "vpc_id": "vpc-023c081d8de8806d3"
          },
          "dependencies": [
            "module.Network.aws_vpc.asp_main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "asp_main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:799061643767:vpc/vpc-023c081d8de8806d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-02342894d40d67e95",
            "default_route_table_id": "rtb-0c486a49e18b8b002",
            "default_security_group_id": "sg-05f521f8b07139989",
            "dhcp_options_id": "dopt-0a7a7b01880eb4fc8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-023c081d8de8806d3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c486a49e18b8b002",
            "owner_id": "799061643767",
            "tags": {
              "Name": "asp_main_vpc"
            },
            "tags_all": {
              "Name": "asp_main_vpc"
            }
          }
        }
      ]
    }
  ]
}